# babbel-url-shortner

./: .gitignore  ARCHITECTURE.md  Makefile  README.md
.github/workflows/: ci.yml  deploy.yml  rollback.yml
lambda/: pyproject.toml
lambda/shared/: __init__.py  config.py  exceptions.py  models.py
lambda/shared/shortcode/: __init__.py  generator.py
lambda/shared/store/: __init__.py  cache.py  dynamo.py  interface.py
lambda/shared/validator/: __init__.py  url.py
lambda/src/: __init__.py
lambda/src/redirect/: __init__.py  handler.py
lambda/src/shorten/: __init__.py  handler.py
terraform/bootstrap/github-actions/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/environments/dev/: backend.tf  data.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/environments/prod/: backend.tf  data.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/cloudfront-waf/: data.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/dynamodb/: main.tf  outputs.tf  variables.tf
terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
terraform/modules/github-actions-oidc/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/vpc/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
