[tool.poetry]
name = "url-shortener"
version = "1.0.0"
description = "URL shortener with AWS Lambda + DynamoDB + ElastiCache Redis"
authors = ["Ali Hassan"]
packages = [
    { include = "shared" },
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
boto3 = ">=1.35"
pydantic = ">=2.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=5.0"
moto = { version = ">=5.0", extras = ["dynamodb"] }
fakeredis = ">=2.26"
boto3-stubs = { version = ">=1.35", extras = ["dynamodb"] }
mypy = ">=1.13"
black = ">=24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.13"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aws_lambda_powertools.*",
    "moto",
    "fakeredis",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: marks tests that call real AWS (deselect with -m 'not integration')"]


